# ApiRust

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
app/: Cargo.toml  Rocket.toml  init.sql  sample.txt
app/src/: db.rs  main.rs  models.rs  routes.rs
src/: models.rs
